// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpotlightMenu renders children correctly 1`] = `
<div
  className="spotlight__menu"
>
  <div>
    Testing
  </div>
</div>
`;

exports[`SpotlightMenu renders correctly 1`] = `
<div
  className="spotlight__menu"
/>
`;
